--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-19 12:59+0800\n"
+"POT-Creation-Date: 2022-11-24 09:19+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -367,15 +367,6 @@ msgid "Seam painting"
 msgstr ""
 
 msgid "Remove selection"
-msgstr ""
-
-msgid "Entering Seam painting"
-msgstr ""
-
-msgid "Leaving Seam painting"
-msgstr ""
-
-msgid "Paint-on seam editing"
 msgstr ""
 
 msgid "Text shape"
@@ -811,6 +802,9 @@ msgstr "Objekt spiegeln"
 
 msgid "Add Primitive"
 msgstr "Primitiv hinzufügen"
+
+msgid "Show Labels"
+msgstr ""
 
 msgid "To objects"
 msgstr "Zu Objekten"
@@ -2051,6 +2045,9 @@ msgstr "Update fehlgeschlagen."
 msgid "Failed to start printing job"
 msgstr ""
 
+msgid "default"
+msgstr "Standard"
+
 msgid "parameter name"
 msgstr ""
 
@@ -2420,6 +2417,18 @@ msgstr ""
 
 msgid "Calibration"
 msgstr "Kalibration"
+
+msgid "Calibration step selection"
+msgstr ""
+
+msgid "Micro lidar calibration"
+msgstr ""
+
+msgid "Bed leveling"
+msgstr ""
+
+msgid "Resonance frequency identification"
+msgstr ""
 
 msgid "Calibration program"
 msgstr "Kalibrationsprogramm"
@@ -3225,8 +3234,8 @@ msgstr "Fehler:"
 msgid "Warning:"
 msgstr "Warnung:"
 
-msgid "Export ok."
-msgstr "Exportieren ok."
+msgid "Export successfully."
+msgstr ""
 
 msgid " (Repair)"
 msgstr " (Reparatur)"
@@ -3254,9 +3263,6 @@ msgstr "Schichten"
 
 msgid "Range"
 msgstr "Reichweite"
-
-msgid "default"
-msgstr "Standard"
 
 msgid ""
 "The application cannot run normally because OpenGL version is lower than "
@@ -3676,6 +3682,12 @@ msgstr "Speichere G-Code Datei als:"
 msgid "Save Sliced file as:"
 msgstr "Geslicte Datei speichern unter:"
 
+#, c-format, boost-format
+msgid ""
+"The file %s has been sent to the printer's storage space and can be viewed "
+"on the printer."
+msgstr ""
+
 msgid ""
 "Print By Object: \n"
 "Suggest to use auto-arrange to avoid collisions when printing."
@@ -3849,6 +3861,12 @@ msgid "Backup interval"
 msgstr "Sicherungsintervall"
 
 msgid "Downloads"
+msgstr ""
+
+msgid "Dark Mode"
+msgstr ""
+
+msgid "Enable Dark mode"
 msgstr ""
 
 msgid "Home page and daily tips"
@@ -7726,7 +7744,9 @@ msgid ""
 "density to improve the strength of the model?"
 msgstr ""
 
-#, c-format, boost-format
+#~ msgid "Export ok."
+#~ msgstr "Exportieren ok."
+
 #~ msgid "Plate %d: %s does not support filament %s.\n"
 #~ msgstr "Druckplatte %d: %s unterstützt kein Filament %s.\n"
 
