--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-19 12:59+0800\n"
+"POT-Creation-Date: 2022-11-24 09:19+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -367,15 +367,6 @@ msgid "Seam painting"
 msgstr ""
 
 msgid "Remove selection"
-msgstr ""
-
-msgid "Entering Seam painting"
-msgstr ""
-
-msgid "Leaving Seam painting"
-msgstr ""
-
-msgid "Paint-on seam editing"
 msgstr ""
 
 msgid "Text shape"
@@ -810,6 +801,9 @@ msgstr "Objektum tükrözése"
 
 msgid "Add Primitive"
 msgstr "Primitív hozzáadása"
+
+msgid "Show Labels"
+msgstr ""
 
 msgid "To objects"
 msgstr "Objektumokra"
@@ -2039,6 +2033,9 @@ msgstr "A frissítés sikertelen."
 msgid "Failed to start printing job"
 msgstr "Nem sikerült elindítani a nyomtatási feladatot"
 
+msgid "default"
+msgstr "alapértelmezett"
+
 msgid "parameter name"
 msgstr ""
 
@@ -2412,6 +2409,18 @@ msgstr ""
 
 msgid "Calibration"
 msgstr "Kalibrálás"
+
+msgid "Calibration step selection"
+msgstr ""
+
+msgid "Micro lidar calibration"
+msgstr ""
+
+msgid "Bed leveling"
+msgstr ""
+
+msgid "Resonance frequency identification"
+msgstr ""
 
 msgid "Calibration program"
 msgstr "Kalibrációs program"
@@ -3222,8 +3231,8 @@ msgstr "Hiba:"
 msgid "Warning:"
 msgstr "Figyelem:"
 
-msgid "Export ok."
-msgstr "Exportálás kész."
+msgid "Export successfully."
+msgstr ""
 
 msgid " (Repair)"
 msgstr " (Javítás)"
@@ -3251,9 +3260,6 @@ msgstr "Layers"
 
 msgid "Range"
 msgstr "Tartomány"
-
-msgid "default"
-msgstr "alapértelmezett"
 
 msgid ""
 "The application cannot run normally because OpenGL version is lower than "
@@ -3669,6 +3675,12 @@ msgstr "G-kód fájl mentése mint:"
 msgid "Save Sliced file as:"
 msgstr "Szeletelt fájl mentése mint:"
 
+#, c-format, boost-format
+msgid ""
+"The file %s has been sent to the printer's storage space and can be viewed "
+"on the printer."
+msgstr ""
+
 msgid ""
 "Print By Object: \n"
 "Suggest to use auto-arrange to avoid collisions when printing."
@@ -3839,6 +3851,12 @@ msgid "Backup interval"
 msgstr "Intervallum"
 
 msgid "Downloads"
+msgstr ""
+
+msgid "Dark Mode"
+msgstr ""
+
+msgid "Enable Dark mode"
 msgstr ""
 
 msgid "Home page and daily tips"
@@ -7670,7 +7688,9 @@ msgid ""
 "density to improve the strength of the model?"
 msgstr ""
 
-#, c-format, boost-format
+#~ msgid "Export ok."
+#~ msgstr "Exportálás kész."
+
 #~ msgid "Plate %d: %s does not support filament %s.\n"
 #~ msgstr "%d. tálca: %s nem használható %s filamenttel.\n"
 
