--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-19 12:59+0800\n"
+"POT-Creation-Date: 2022-11-24 09:19+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -367,15 +367,6 @@ msgid "Seam painting"
 msgstr ""
 
 msgid "Remove selection"
-msgstr ""
-
-msgid "Entering Seam painting"
-msgstr ""
-
-msgid "Leaving Seam painting"
-msgstr ""
-
-msgid "Paint-on seam editing"
 msgstr ""
 
 msgid "Text shape"
@@ -811,6 +802,9 @@ msgstr "Symétriser l'Objet"
 
 msgid "Add Primitive"
 msgstr "Ajouter une primitive"
+
+msgid "Show Labels"
+msgstr ""
 
 msgid "To objects"
 msgstr "Aux objets"
@@ -2025,6 +2019,9 @@ msgstr "Mise à jour a échoué."
 msgid "Failed to start printing job"
 msgstr ""
 
+msgid "default"
+msgstr "défaut"
+
 msgid "parameter name"
 msgstr ""
 
@@ -2391,6 +2388,18 @@ msgstr ""
 
 msgid "Calibration"
 msgstr "Étalonnage"
+
+msgid "Calibration step selection"
+msgstr ""
+
+msgid "Micro lidar calibration"
+msgstr ""
+
+msgid "Bed leveling"
+msgstr ""
+
+msgid "Resonance frequency identification"
+msgstr ""
 
 msgid "Calibration program"
 msgstr "Programme d'étalonnage"
@@ -3197,8 +3206,8 @@ msgstr "Erreur:"
 msgid "Warning:"
 msgstr "Avertissement:"
 
-msgid "Export ok."
-msgstr "Exporter ok."
+msgid "Export successfully."
+msgstr ""
 
 msgid " (Repair)"
 msgstr "(Réparation)"
@@ -3227,9 +3236,6 @@ msgstr "Couches"
 
 msgid "Range"
 msgstr "Intervalle"
-
-msgid "default"
-msgstr "défaut"
 
 msgid ""
 "The application cannot run normally because OpenGL version is lower than "
@@ -3648,6 +3654,12 @@ msgstr "Enregistrer le fichier G-code sous :"
 msgid "Save Sliced file as:"
 msgstr "Enregistrer le fichier découpé sous :"
 
+#, c-format, boost-format
+msgid ""
+"The file %s has been sent to the printer's storage space and can be viewed "
+"on the printer."
+msgstr ""
+
 msgid ""
 "Print By Object: \n"
 "Suggest to use auto-arrange to avoid collisions when printing."
@@ -3820,6 +3832,12 @@ msgid "Backup interval"
 msgstr "Intervalle de sauvegarde"
 
 msgid "Downloads"
+msgstr ""
+
+msgid "Dark Mode"
+msgstr ""
+
+msgid "Enable Dark mode"
 msgstr ""
 
 msgid "Home page and daily tips"
@@ -7710,7 +7728,9 @@ msgid ""
 "density to improve the strength of the model?"
 msgstr ""
 
-#, c-format, boost-format
+#~ msgid "Export ok."
+#~ msgstr "Exporter ok."
+
 #~ msgid "Plate %d: %s does not support filament %s.\n"
 #~ msgstr "Plaque %d : %s ne prend pas en charge le filament %s.\n"
 
