ENH: sync with localazy and update pos
Change-Id: Idd235f05fddc4ee7962df7fe001ee71ebaff3ce7

--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-11-24 09:19+0800\n"
-"PO-Revision-Date: 2022-11-24 09:28+0800\n"
+"PO-Revision-Date: 2022-11-29 20:47+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 3.2\n"
+"X-Generator: Poedit 3.1\n"
 
 msgid "Supports Painting"
 msgstr "支撑绘制"
@@ -2016,22 +2016,22 @@ msgid "Tool"
 msgstr "工具"
 
 msgid "Height: "
-msgstr ""
+msgstr "层高: "
 
 msgid "Width: "
-msgstr ""
+msgstr "线宽: "
 
 msgid "Speed: "
-msgstr ""
+msgstr "速度: "
 
 msgid "Flow: "
-msgstr ""
+msgstr "挤出流量: "
 
 msgid "Fan Speed: "
-msgstr ""
+msgstr "风扇速度: "
 
 msgid "Temperature: "
-msgstr ""
+msgstr "温度: "
 
 msgid "Loading G-codes"
 msgstr "正在加载G-code"
@@ -2151,7 +2151,7 @@ msgid "Total Estimation"
 msgstr "总预估"
 
 msgid "Time Estimation"
-msgstr ""
+msgstr "时间预估"
 
 msgid "Normal mode"
 msgstr "普通模式"
